src/test/ui/const-generics/generic-sum-in-array-length.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/generic-sum-in-array-length.rs:6:45
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                             ^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

